CHANGES

 - ensure samplesheet testing works without WTSI filessystem

releaes 77.7
 - run in progress tracking:
     look for lane sub-directories in the BaseCalls directory if none found in the Intensities directory;
     check for existence of a RTAComplete.txt file rather that a ImageAnalysis_Netcopy_complete_Read#.txt file

release 77.6
 - added code to generate HiSeqX runfolder names
 - updated list of directories to search for cycle sub-directories

release 77.5
 - added new version value for HiSeqX RunInfo.xml

release 77.4
 - changed list of top level directories for HiSeqX 

release 77.3
 - samplesheet creation now supports dual indexes
 - sensor.pm now uses npg::api::request to allow for caching xml feeds when
   retrieving sensor data
 - web app and database adjustments for HiSeqX
 - callbacks for uptime graphs removed
 - removed the uptimes table from the textual listing of intruments page -
     made page loading very slow
 - removed upgrade schema scripts and redesign proposal file from MANIFEST
 - merged instrument checker scripts for all existing sequencing instrument types
 - removed instrument checker scripts for invividual seq instrument types
 - all instrument checkers to use local libraries if available

release 77.2
 - ensure module and package version starts with a digit
 - npg_tracking::illumina::run::folder and its tests updated; the following accessors removed:
       data_path (unused from outside),
       tag_qseqs_path (redundant),
       score_path (redundant),
       qseq_location_path (redundant);
     tests specific for old illumina mashines (IL) removed;
     unused analysis_path accessor reimplemented to point to the top-level custom analysis folder
       paths from analysis_path removed;
     definitions of most paths placed together
     public write accessors for bam_basecall and dif_files paths since they are used from the pipeline,
       old private accessors retained for backwards compatibility
   
release 77.1