@@ -1,0 +1,10 @@
+language: perl
+perl:
+  - "5.16"
+before_install:
+  - sudo apt-get install libgd2-xpm-dev
+  - cpanm --quiet --notest Alien::Tidyp
+before_script:
+  - mysql -e 'create database npgt;'
+env:
+  - TEST_AUTHOR=1 TZ=Europe/London
