@@ -8,6 +8,5 @@ default_view=run
 dbhost=localhost
 dbport=3306
 dbuser=root
-dbpass=npg
 dbname=npgt
 decription_key=abcd
